--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws": "0.0.3-2",
     "aws-sdk": "^2.142.0",
+    "chai": "^4.1.2",
+    "lodash": "^4.17.4",
     "mocha": "^4.0.1",
     "remove": "^0.1.5",
     "uuid": "^3.1.0"
